# anti-emoji-bot

./: anti-emoji-bot.cabal  flake.nix  testdata
app/: Main.hs
